# DevOps

./: .gitignore  Aztec.cpp  Makefile  Makefile.am  Makefile.in  Makefile.manual  aztec  config.status  configure.ac  configure~  main.cpp
.deps/: Aztec.Po  main.Po
.github/workflows/: makefile.yml
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.3
deb/DEBIAN/: control
deb/usr/local/include/aztec/: Aztec.h
deb/usr/local/share/aztec/data/: data.txt
deb/usr/local/share/man/man1/: aztec.1
tests/: Makefile  Makefile.am  Makefile.in  main.cpp
tests/.deps/: Aztec.Po  main.Po
